--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -8,9 +8,6 @@
     tools:context=".views.ShoppingCartActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".views.ShoppingCartActivity">
@@ -32,21 +29,23 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RecyclerCar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="150dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/total_compra"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btn_next_address"
             android:layout_width="175dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="56dp"
+            android:layout_marginBottom="20dp"
             android:layout_weight="3"
             android:background="@drawable/btn_style1"
             android:text="Siguiente"
@@ -55,6 +54,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <!--
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/menu_options_nav"
             android:layout_width="0dp"
@@ -65,17 +65,22 @@
             app:menu="@menu/bottom_navigation">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
-
+-->
         <TextView
             android:id="@+id/total_compra"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp"
+            android:text="Costo total"
+            android:textSize="25sp"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_red_dark"
             app:layout_constraintBottom_toTopOf="@+id/btn_next_address"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/RecyclerCar"
-            app:layout_constraintVertical_bias="0.805" />
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
