Ya uní el proyecto Drag&Drop. Solucione el prblema de arrastrar el producto. Desde este punto ya se debe empezar a integrar las Apis para recuperar la informacion de la base de datos.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="blanco">#FFF</color>
     <color name="negro">#000</color>
     <color name="rojo">#D50000</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="rojoClaro">#EF5250</color>
 </resources>
