--- a/app/src/main/res/layout/item_categories.xml
+++ b/app/src/main/res/layout/item_categories.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" 
+    android:id="@+id/linear_element"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -9,9 +10,11 @@
     android:foreground="?android:attr/selectableItemBackground">
     <ImageView
         android:id="@+id/img_category"
+        android:clickable="true"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/burgerking"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_gravity="center"
         android:layout_margin="10dp"/>
     <TextView
