--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -30,7 +30,7 @@
             android:id="@+id/img_restaurant_icon"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.134"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,8 +51,7 @@
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/img_restaurant_product_bg"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.804"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_restaurant_icon"
             app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
 
@@ -61,12 +60,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:fontFamily="@font/nimbusreg"
+            android:text="Calle 75N # 45-09 \n 8 382459 - 325 4789654"
             android:textColor="#000000"
             android:textSize="15dp"
-            android:text="Calle 75N # 45-09 \n 8 382459 - 325 4789654"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img_restaurant_icon"
             app:layout_constraintTop_toBottomOf="@+id/img_restaurant_product_bg" />
@@ -106,13 +104,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/nimbusbol"
             android:text="Platos"
             android:textColor="#F10B00"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recycler_categories" />
 
@@ -123,7 +122,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toTopOf="@+id/menu_options_nav"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.476"
