--- a/app/src/main/res/layout/activity_executive__category.xml
+++ b/app/src/main/res/layout/activity_executive__category.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/layout_main_activity"
+    android:id="@+id/layout_executive_category"
     tools:context=".activities.Executive_Category">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +27,7 @@
 
 
         <ImageView
-            android:id="@+id/img_restaurant_icon"
+            android:id="@+id/img_restaurant_executy_category"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="50dp"
@@ -38,7 +38,7 @@
             app:srcCompat="@drawable/burgerking" />
 
         <TextView
-            android:id="@+id/tv_restaurant_name"
+            android:id="@+id/tv_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -51,7 +51,7 @@
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_restaurant_icon" />
+            app:layout_constraintTop_toBottomOf="@+id/img_restaurant_executy_category" />
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -63,7 +63,7 @@
             android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_date" />
 
         <TextView
             android:id="@+id/textView7"
