--- a/app/src/main/res/layout/item_restaurants.xml
+++ b/app/src/main/res/layout/item_restaurants.xml
@@ -17,15 +17,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/imv_restaurant"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_shopping_car"
             android:layout_gravity="center"
-            android:layout_margin="10dp"/>
+            android:layout_marginBottom="5dp"/>
         <TextView
             android:id="@+id/tv_nombre_restaruante"
             android:layout_width="match_parent"
@@ -34,6 +35,8 @@
             android:fontFamily="@font/nimbusreg"
             android:textSize="15sp"
             android:textAlignment="center"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_gravity="center"/>
     </LinearLayout>
 
